--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <div class="section__container footer__bar">
         <div class="footer__logo">
           <h4><a href="#">LUMA</a></h4>
-          <p>Copyright © 2023 Web Design Mastery. All rights reserved.</p>
+          <p>Copyright © Luma Corporation . All rights reserved.</p>
         </div>
         <ul class="footer__nav">
           <li class="footer__link"><a href="#">About</a></li>
